--- a/index.html
+++ b/index.html
@@ -1,44 +1,167 @@
 <!DOCTYPE html>
-   <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
 
-      <!--=============== FAVICON ===============-->
-      <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-      <!--=============== REMIXICONS ===============-->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.0.1/remixicon.min.css">
+   <!--=============== FAVICON ===============-->
+   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
-      <!--=============== SWIPER CSS ===============-->
-      <link rel="stylesheet" href="">
+   <!--=============== REMIXICONS ===============-->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.0.1/remixicon.min.css">
 
-      <!--=============== CSS ===============-->
-      <link rel="stylesheet" href="assets/css/styles.css">
+   <!--=============== SWIPER CSS ===============-->
+   <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
-      <title>Responsive clothing website - Bedimcode</title>
-   </head>
-   <body>
-      <!--==================== HEADER ====================-->
-      <header class="header" id="header">
-         
-      </header>
+   <!--=============== CSS ===============-->
+   <link rel="stylesheet" href="assets/css/styles.css">
 
-      <!--==================== MAIN ====================-->
-      <main class="main">
-         <!--==================== HOME ====================-->
-         <section class="home">
-            
-         </section>
-      </main>
+   <title>Responsive clothing website - Bedimcode</title>
+</head>
 
-      <!--=============== SCROLLREVEAL ===============-->
-      <script src=""></script>
+<body>
+   <!--==================== HEADER ====================-->
+   <header class="header" id="header">
+      <nav class="nav container">
+         <a href="#" class="nav__logo">OutfitHub</a>
 
-      <!--=============== SWIPER JS ===============-->
-      <script src=""></script>
+         <div class="nav__menu" id="nav-menu">
+            <ul class="nav__list">
 
-      <!--=============== MAIN JS ===============-->
-      <script src="assets/js/main.js"></script>
-   </body>
+               <li class="nav__item">
+                  <a href="#" class="nav__link">Home</a>
+               </li>
+
+               <li class="nav__item">
+                  <a href="#" class="nav__link">Men</a>
+               </li>
+
+               <li class="nav__item">
+                  <a href="#" class="nav__link">Women</a>
+               </li>
+
+               <li class="nav__item">
+                  <a href="#" class="nav__link">Bags</a>
+               </li>
+
+               <li class="nav__item">
+                  <a href="#" class="nav__link">Community</a>
+               </li>
+
+            </ul>
+
+            <div class="nav__close" id="nav-close">
+               <i class="ri-close-line"></i>
+            </div>
+         </div>
+
+         <div class="nav__actions">
+            <i class="ri-heart-3-line"></i>
+            <i class="ri-shopping-cart-line"></i>
+
+            <div class="nav__toggle" id="nav-toggle">
+               <i class="ri-menu-line"></i>
+            </div>
+         </div>
+      </nav>
+   </header>
+
+   <!--==================== MAIN ====================-->
+   <main class="main">
+      <!--==================== HOME ====================-->
+      <section class="home">
+         <div class="home__container container">
+            <div class="home__content">
+               <div class="home__circle">
+                  <div class="home__subcircle"></div>
+                  <h1 class="home__title">OutfitHub</h1>
+               </div>
+
+               <div class="home__swiper swiper">
+                  <div class="swiper-wrapper">
+                     <article class="home__article swiper-slide">
+                        <img src="assets/img/clothing-1.png" alt="" class="home__img">
+
+
+                        <h2 class="home__product">Core Hoddie</h2>
+                        <h2 class="home__price">$125</h2>
+                     </article>
+
+                     <article class="home__article swiper-slide">
+                        <img src="assets/img/clothing-2.png" alt="" class="home__img">
+
+
+                        <h2 class="home__product">Stylish Backpack</h2>
+                        <h2 class="home__price">$115</h2>
+                     </article>
+
+                     <article class="home__article swiper-slide">
+                        <img src="assets/img/clothing-3.png" alt="" class="home__img">
+
+
+                        <h2 class="home__product">Premiere Pants</h2>
+                        <h2 class="home__price">$125</h2>
+                     </article>
+
+                     <article class="home__article swiper-slide">
+                        <img src="assets/img/clothing-4.png" alt="" class="home__img">
+
+
+                        <h2 class="home__product">Black Shorts</h2>
+                        <h2 class="home__price">$75</h2>
+                     </article>
+
+                     <article class="home__article swiper-slide">
+                        <img src="assets/img/clothing-5.png" alt="" class="home__img">
+
+
+                        <h2 class="home__product">Cool T-Shirt</h2>
+                        <h2 class="home__price">$60</h2>
+                     </article>
+                  </div>
+               </div>
+
+               <div class="swiper-button-prev">
+                  <i class="ri-arrow-left-line"></i>
+               </div>
+               <div class="swiper-button-next">
+                  <i class="ri-arrow-right-line"></i>
+               </div>
+
+            </div>
+
+
+
+            <footer class="home__footer">
+               <div class="home__languages">
+                  ES | EN
+               </div>
+
+               <div class="home__social">
+                  <a href="https://www.linkedin.com/in/yogeshm01" class="home__social-link">
+                     <i class="ri-linkedin-box-fill"></i>
+                  </a>
+                  <a href="#" class="home__social-link">
+                     <i class="ri-mail-fill"></i>
+                  </a>
+                  <a href="https://github.com/yogeshm01" class="home__social-link">
+                     <i class="ri-github-fill"></i>
+                  </a>
+               </div>
+            </footer>
+         </div>
+      </section>
+   </main>
+
+   <!--=============== SCROLLREVEAL ===============-->
+   <script src="assets/js/scrollreveal.min.js"></script>
+
+   <!--=============== SWIPER JS ===============-->
+   <script src="assets/js/swiper-bundle.min.js"></script>
+
+   <!--=============== MAIN JS ===============-->
+   <script src="assets/js/main.js"></script>
+</body>
+
 </html>
